# bloom

./: .coverage  .env.example  .gitignore  alembic.ini  coverage.xml  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  script.py
alembic/: env.py
alembic/versions/: 04d29a841b41_changing_models.py  07b4412aa3bb_переименован_столбец_в_таблице_documents.py  0a8dcda7604a_небольшой_фикс_для_дат.py  6adf039ec74b_add_two_tables_payment_payment_detail.py  70fe8f8732e5_добавление_нового_поля_в_таблице_.py  7689061246d5_upd.py  7d484cfff5ff_миксины_добавлены_во_все_таблицы.py  931186da3aef_baseline.py  a2c0b995a5d5_add_created_at_and_updated_at_to_.py  add_mime_type_to_documents.py  add_outbox_table.py  ae12d9ec3e74_изменено_название_столбца_на_правильное.py  af27762a3ddb_changing_models_v2.py  afb631cc3dd8_fix_attorney_model.py  b875b3fdf17f_add_telegram_username_to_attorneys.py  cce7cc311b4d_add_table_payment_detail.py  ced1ebacef76_убрано_значение_nullable.py  cf91bc83320c_changing_models_v3.py  e0ee2949678b_initial_migration.py  f194b6b764f7_изменено_название_столбца.py  f686a9802746_new_field_for_contacts_relationship_to_.py  f94e3cdd5669_init_schema_timestamptz.py  fc14f24f4ef6_initial_migration.py
backend/: main.py
backend/application/commands/: attorney.py  case.py  client.py  client_payment.py  contact.py  document.py  event.py  payment_detail.py
backend/application/dto/: attorney.py  case.py  client.py  client_payment.py  contact.py  details_payment.py  document.py  (+1 more)
backend/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logger.py  security.py  settings.py  strategy.py
backend/domain/: __init__.py
backend/infrastructure/: decorators.py  uow.py  uow_factory.py
backend/scripts/: data.sql  debug_db.py  get_data.sql  index.sql  run_outbox_worker.py  tables.sql
backend/tests/: conftest.py
docs/: document_storage_implementation.md  frontend_auth_example.md  windows_setup_guide.md
frontend/: package-lock.json  package.json
pdf-coordinate-finder/: .gitignore  README.md  index.html  package.json
scripts/: README_coordinates.md  coordinate_finder.html  create_coordinate_grid.py  preview_invoice_template.py
(+304 files in other folders)
